migrate to StandardCharsets (java 17)